# wax

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  WINGET_PLAN.md  benchmark.sh  install.bat  install.ps1  install.sh
.claude/commands/: improve.md
.github/workflows/: release.yml
docs/: WINDOWS_PACKAGE_MANAGER_INVESTIGATION.md  comparison.md
docs/windows-notes/: DESK_RESEARCH.md  UNIFIED_SOURCES.md
src/: api.rs  bottle.rs  builder.rs  cache.rs  cask.rs  chocolatey.rs  deps.rs  discovery.rs  ecosystem_install.rs  error.rs  formula_parser.rs  install.rs  lockfile.rs  main.rs  package_spec.rs  remote_search.rs  scoop.rs  signal.rs  sudo.rs  system_pm.rs  tap.rs  ui.rs  version.rs  winget_install.rs
src/commands/: audit.rs  bundle.rs  completions.rs  doctor.rs  features.rs  info.rs  install.rs  leaves.rs  link.rs  list.rs  lock.rs  mod.rs  pin.rs  reinstall.rs  search.rs  self_update.rs  services.rs  show_deps.rs  sync.rs  tap.rs  uninstall.rs  update.rs  upgrade.rs  uses.rs  version_install.rs  wax_info.rs
src/system/: distro.rs  generations.rs  installer.rs  manifest.rs  mod.rs  query.rs  resolver.rs  state.rs
src/system/extractor/: apk.rs  deb.rs  mod.rs  pacman.rs  rpm.rs
src/system/registry/: apk.rs  apt.rs  dnf.rs  mod.rs  pacman.rs
tests/: cli.rs
tests/fixtures/: scoop_ripgrep.json
