[package]
name = "waxpkg"
version = "0.12.6"
edition = "2021"
authors = ["Wax Contributors"]
description = "Fast Homebrew-compatible package manager"
license = "MIT"
repository = "https://github.com/plyght/wax"
homepage = "https://github.com/plyght/wax"
documentation = "https://docs.rs/waxpkg"
readme = "README.md"
keywords = ["package-manager", "homebrew", "macos", "cli", "installer"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wax"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream", "gzip", "brotli"] }
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

indicatif = "0.18"
console = "0.16"
inquire = "0.9"

anyhow = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

tar = "0.4"
flate2 = "1"
sha2 = "0.10"
tempfile = "3"
regex = "1"
libc = "0.2"

dunce = "1"
ctrlc = "3"
num_cpus = "1"
shellexpand = "3"
urlencoding = "2.1.3"
zstd = "0.13"
xz2 = "0.1"
bzip2 = "0.4"
quick-xml = { version = "0.37", features = ["async-tokio"] }
